--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "animate.css": "^4.1.1",
     "firebase": "^8.2.10",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
@@ -16,6 +17,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sweetalert2": "^10.16.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
